--- a/1.ipynb
+++ b/1.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_from_mat(\"data/1/data.mat\")\n",
+    "data = load_from_mat(\"data/1/data_critical.mat\")\n",
     "plot_data(data)"
    ]
   },
